--- a/app/style/about.less
+++ b/app/style/about.less
@@ -239,7 +239,7 @@
   background-position: 50% 50%;
   background-size: cover;
   height: 520px;
-  margin-bottom: 50px;
+  margin-bottom: 40px;
   position: relative;
   .header {
     position: absolute;
@@ -285,43 +285,37 @@
 .brand-heritage {
   margin: 0 auto;
   max-width: 910px;
-  h1 {
-    margin-bottom: 20px;
-  }
   p {
     margin-bottom: 25px;
   }
-  .box {
-    .box-outter {
-      margin: 0 auto;
-    }
-    img{
+  .row {
+    margin-bottom: 25px;
+    .col-md-4 img,.col-xs-12 img {
       width: 100%;
       height: auto;
+      margin-bottom: 20px;
     }
 
-  }
-  .career-desc{
-    padding: 0 15px;
   }
   
 }
 
 .brand-heritage-wrapper{
-  background-color: #FAFAFA;margin-top: 50px;padding:50px 0;
+  background-color: #FAFAFA;margin-top: 40px;padding:40px 0;
   .banner-item{
     max-width:910px;
     margin:0 auto 30px;
     img{
       width:100%;
+
     }
   }
 }
 
 // contact us
 .contact-block {
-  margin-bottom: 50px;
-  margin-top: 50px;
+  margin-bottom: 40px;
+  margin-top: 40px;
 }
 .contact-service {
   height: 500px;
@@ -398,6 +392,12 @@
   img {
     width: 250px;
     border-radius: 50%;
+  }
+}
+
+.management-wrapper {
+  .career-desc {
+    padding:0 8px;
   }
 }
 
