--- a/app/style/mockup-checkbox.less
+++ b/app/style/mockup-checkbox.less
@@ -41,6 +41,7 @@
     border: 2px solid #C6C6C6;
     position: absolute;
     top: 3px;
+    left: -1px;
   }
   input[type="radio"] {
     visibility: hidden;
@@ -223,6 +224,7 @@ width: 120px;
   padding-right: 20px;
   max-width: 100%!important;
   font-family: 'Open Sans',sans-serif;
+  min-width: 152px;
 }
 
 .auto-complete {
