--- a/app/view/about/brand-heritage.html
+++ b/app/view/about/brand-heritage.html
@@ -11,7 +11,7 @@
 <body>
   {% include "../base/header.html" %}
   <div class="history-bg"></div>
-  <div class="brand-heritage" style="margin-top:50px;">
+  <div class="brand-heritage container" style="margin-top:40px;">
     <h1 class="text-center title-parg">Sotheby’s Heritage</h1>
     <p class="career-desc">
         The Sotheby’s International Realty® brand harnesses the worldwide recognition and prestige of the Sotheby’s name. Auctioneers since 1744 with a fine tradition of marketing the world’s most cherished possessions, Sotheby’s is now an innovative global art business serving the most discerning clientele. Sotheby’s International Realty benefits from this tradition and innovation through equity in the Sotheby’s brand name and marketing collaboration.
@@ -136,80 +136,86 @@
     </div>
     {% endfor %}
   </div>
-  
-  <div class="brand-heritage-wrapper">  
+
+  <div class="history-mobile-view">
+      {% for item in history %}
+      <div class="mobile-history-box">
+        <div class="column-img">
+          <img src="{{item.img}}" alt="">
+        </div>
+        <div class="column-text">
+          <div class="title"><span class="year">{{item.year}}</span>&nbsp;{{item.title}}</div>
+          <p class="desc">{{item.desc|safe}}</p>
+        </div>
+      </div>
+      {% endfor %}
+    </div>
     
-    <div class="banner-item"><img src="/public/brand/realty.jpg"/></div>
-
-    <div class="brand-heritage" style="margin-top: 50px;">
-      <h1 class="text-center title-parg" >Sotheby’s International Realty <span style="font-size: 14px;vertical-align: top;">®</span></h1>
-      <p class="career-desc">
-          Founded on the same commitment to exceptional service that characterized the Sotheby’s Auction House for more than two centuries, the Sotheby’s International Realty® brand is created and becomes known around the world for the distinctive properties it represents. 
-      </p>
-      <p class="career-desc">
-          The Sotheby’s international Realty® brand is synonymous with excellence, luxury, taste and discernment, offering only the best and never settling for less. Sotheby’s International realty network provides access to luxury real estate and homes for sale worldwide, and the website allows you to search property listings globally, and includes a large inventory of luxury homes that matches your lifestyle choices such as waterfront, golf, island, vacation, mountain and many others.        
-      </p>
-    </div></div>
-
-
-  <div class="brand-heritage" style="margin-top: 50px;">
-      <div class="row" style="margin: 20px auto;margin-bottom: 40px;">
-          
-           
-           <div class="box-outter">
-             <div class="box">
-               <div class="box-inner">
-                 <img src="/public/brand/list_sothebys_01.jpg">
-               </div>
-             </div>
-           </div><div class="box-outter">
-             <div class="box">
-               <div class="box-inner">
-                 <img src="/public/brand/list_sothebys_02.jpg">
-               </div>
-             </div>
-           </div><div class="box-outter">
-             <div class="box">
-               <div class="box-inner">
-                 <img src="/public/brand/list_sothebys_03.jpg">
-               </div>
-             </div>
-           </div>
-         
-           
-           <div class="box-outter">
-             <div class="box">
-               <div class="box-inner">
-                 <img src="/public/brand/list_sothebys_04.png">
-               </div>
-             </div>
-           </div>
-         
-           
-         </div>
-          
-           
-        
-
-
-    <h1 class="text-center title-parg">List Group</h1>
-    <p class="career-desc">
-        The List Company was established in 1991, immediately after the real estate bubble burst in Japan. The focus of our organization was to transform the real estate industry that was in a period of chaos at the time, and restore the real value of real estate and trust in real estate as an asset. 
-    </p>
-    <p class="career-desc">
-        Starting with real estate brokerage and marketing business, we have expanded the range of our business one step at a time from the sales of high quality original brand condominium and detached houses to town development business, during which time we have acquired an extensive track record and a wealth of unique know-hows.
-    </p>
-    <p class="career-desc">
-        We will continue to strive to be a company that is well-acquainted with a wide range of real estate transactions and that customers can rely on us as a one-stop “real estate specialist” for all types of real estate needs. 
-    </p>
-    <p class="career-desc">
-        Creating new possibilities in real estate As a specialist that is well-acquainted with all types of real-estate businesses and a generalist that has comprehensive capabilities related to real estate, we also work hard for a real estate stock business, real estate flow business such as dwelling for sale and the sales for individuals and corporates as well as for domestic and abroad.         
-    </p>
-    <p class="career-desc">
-        List Group consistently deals in every field of real-estate business incorporating the comprehensive strengths of “Sotheby’s International Realty®” of a worldwide network which combines the actual achievement and the trust we have developed so far in property project. We always make an effort to create new possibilities for regarding real-estate as our keywords “flow, stock and cross borders”. 
-    </p>
+    <div class="brand-heritage-wrapper">  
+  
+      <div class="brand-heritage" >
+          <h1 class="text-center title-parg">Sotheby’s International Realty <span style="font-size: 14px;vertical-align: top;">®</span></h1>
+          <div class="row">
+              <div class="col-md-6 col-xs-12"> <img src="/public/brand/realty.jpg"></div>
+              <div class="col-md-6 col-xs-12">   <p class="career-desc">
+                  Founded on the same commitment to exceptional service that characterized the Sotheby’s Auction House for more than two centuries, the Sotheby’s International Realty® brand is created and becomes known around the world for the distinctive properties it represents. 
+              </p>
+              <p class="career-desc">
+                  The Sotheby’s international Realty® brand is synonymous with excellence, luxury, taste and discernment, offering only the best and never settling for less. Sotheby’s International realty network provides access to luxury real estate and homes for sale worldwide, and the website allows you to search property listings globally, and includes a large inventory of luxury homes that matches your lifestyle choices such as waterfront, golf, island, vacation, mountain and many others.        
+              </p></div>
+              
+                  </div>
+  
+      
+      
+      </div>
   </div>
-  <div class="brand-heritage" style="margin-top: 50px; ">
+  
+    <div class="brand-heritage" style="margin-top: 40px;">
+  
+            
+             
+          
+  
+  
+      <h1 class="text-center title-parg">List Group</h1>
+  
+  
+  
+      <div class="row">
+        <div class="col-md-6 col-xs-12">   <img src="/public/brand/list_sothebys_01.jpg"></div>
+        <div class="col-md-6 col-xs-12"> <p class="career-desc">
+          The List Company was established in 1991, immediately after the real estate bubble burst in Japan. The focus of our organization was to transform the real estate industry that was in a period of chaos at the time, and restore the real value of real estate and trust in real estate as an asset. 
+      </p><p class="career-desc">
+        Starting with real estate brokerage and marketing business, we have expanded the range of our business one step at a time from the sales of high quality original brand condominium and detached houses to town development business, during which time we have acquired an extensive track record and a wealth of unique know-hows.
+    </p></div>
+        
+            </div>
+  
+            <div class="row">
+               <div class="col-md-6 col-xs-12"> <p class="career-desc">
+                We will continue to strive to be a company that is well-acquainted with a wide range of real estate transactions and that customers can rely on us as a one-stop “real estate specialist” for all types of real estate needs. 
+            </p> </div>  <div class="col-md-6 col-xs-12">   <img src="/public/brand/list_sothebys_02.jpg"></div>
+           
+              
+                  </div>
+                  <div class="row">
+                    <div class="col-md-6 col-xs-12">   <img src="/public/brand/list_sothebys_03.jpg"></div>
+                    <div class="col-md-6 col-xs-12">    <p class="career-desc">
+                      Creating new possibilities in real estate As a specialist that is well-acquainted with all types of real-estate businesses and a generalist that has comprehensive capabilities related to real estate, we also work hard for a real estate stock business, real estate flow business such as dwelling for sale and the sales for individuals and corporates as well as for domestic and abroad.         
+                  </p></div>
+                    
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6 col-xs-12">    <p class="career-desc">
+                                List Group consistently deals in every field of real-estate business incorporating the comprehensive strengths of “Sotheby’s International Realty®” of a worldwide network which combines the actual achievement and the trust we have developed so far in property project. We always make an effort to create new possibilities for regarding real-estate as our keywords “flow, stock and cross borders”. 
+                            </p>
+                              </div>     <div class="col-md-6 col-xs-12">   <img src="/public/brand/list_sothebys_04.png"></div>
+                         
+                          
+                              </div>
+    </div>
+  <div class=" container brand-heritage ">
     <h1 class="text-center title-parg">List Sotheby’s International Realty</h1>
     <p class="career-desc">
         Adding to the List Group family, List Sotheby’s International Realty is proud to announce its new office opening in Hong Kong, beside offices in Japan, Hawaii, Philippines and Singapore. The Group will soon open a new office in Bangkok, Thailand to serve luxury residential property clients in 2018.
