--- a/app/view/about/management.html
+++ b/app/view/about/management.html
@@ -10,7 +10,7 @@
 <body>
   {% include "../base/header.html" %}
   {% import "../base/forms.html" as forms %}
-  <div class="container" style="margin-top:50px; margin-bottom: 50px;">
+  <div class="container" style="margin-top:40px; margin-bottom: 40px;">
     <h1 class="text-center title-parg" >Management</h1>
 
     <div class="management-pic-wrapper">
@@ -18,37 +18,40 @@
       <h4 style="font-size:18px;">Hisashi Kitami</h4>
       <p>President and CEO of List Group</p>
     </div>
-    <p class="career-desc">
-      Mr. Kitami established the List Group in 1991, with bold visions and farsightedness having worked as a sales professional at a real estate company, a time when the real estate industry was disrupted. The company’s first mission was to restore the trust in real estate business.
-    </p>
-    <br>
-    <p class="career-desc" style="margin-bottom: 70px;">
-      Mr. Kitami continued to grow and expand List Group with strong presence in Japan and globally. The company was the first to offer home owners warranty for used independent housings in Japan in 2012. In 2017, the company developed the innovative eco-town in Yokohama.
-    </p>
+    <div class="management-wrapper">    <p class="career-desc">
+        Mr. Kitami established the List Group in 1991, with bold visions and farsightedness having worked as a sales professional at a real estate company, a time when the real estate industry was disrupted. The company’s first mission was to restore the trust in real estate business.
+      </p>
+      <br>
+      <p class="career-desc" style="margin-bottom: 70px;">
+        Mr. Kitami continued to grow and expand List Group with strong presence in Japan and globally. The company was the first to offer home owners warranty for used independent housings in Japan in 2012. In 2017, the company developed the innovative eco-town in Yokohama.
+      </p></div>
+
 
     <div class="management-pic-wrapper">
       <img src="/public/images/management/Yasushi_Yamada.jpg" alt="Management">
       <h4 style="font-size:18px;">Yasushi Yamada</h4>
       <p>Chief Operation Officer, List Holdings Singapore Pte. Ltd</p>
     </div>
-    <p class="career-desc">
-      Mr. Yamada has more than two decades of experience in real estate finance with a strong track record in transactions and has built up an extensive network in Japan and overseas.
-    </p>  <br>
-    <p class="career-desc" style="margin-bottom: 80px;">
-      With a specific mandate to establish and grow the List Group’s business in Asia, he began his career in Itochu Corpand subsequently built his expertise in real estate starting at Hypo Real Estate Capital as a lender. He then shifted his focus to cross-border property investment at Mori Building, Tokio Marine, and CBRE Japan where he was the head of the consulting business.
-    </p>
+    <div class="management-wrapper">    <p class="career-desc">
+        Mr. Yamada has more than two decades of experience in real estate finance with a strong track record in transactions and has built up an extensive network in Japan and overseas.
+      </p>  <br>
+      <p class="career-desc" style="margin-bottom: 80px;">
+        With a specific mandate to establish and grow the List Group’s business in Asia, he began his career in Itochu Corpand subsequently built his expertise in real estate starting at Hypo Real Estate Capital as a lender. He then shifted his focus to cross-border property investment at Mori Building, Tokio Marine, and CBRE Japan where he was the head of the consulting business.
+      </p></div>
+
 
     <div class="management-pic-wrapper">
       <img src="/public/images/management/binoche_chan.jpg" alt="Management">
       <h4 style="font-size:18px;">Binoche Chan</h4>
       <p>Chief Operating Officer</p>
     </div>
-    <p class="career-desc">
-      A leader who listens and delivers, a dreamer who thinks and acts, Binoche Chan devotes her passion only to matters that pull her heartstrings. With over 15 years of experience in sales, marketing and luxurious properties dealership has equipped her well in handling different situations regarding business set up and operation, it is her detail-oriented attitude and respectable personality that have gained her regard, trust and reputation from clients, colleagues and business partners alike. Reputed for her capability, professionalism, dedication and integrity, Binoche puts her words into action and stays true to her promise in realizing the clients’ dream of a unique and perfect home, that embraces family history, hospitality and a deep taste of life.
-    </p>  <br>
-    <p class="career-desc" style="margin-bottom: 80px;">
-     <br> Recently appointed Chief Operating Officer of List Sotheby’s International Realty, Hong Kong, one of the leading luxury residential brokerages in Hong Kong and the region, Binoche leads a team of dynamic, experienced and well-connected agents that specialize in luxury residential homes, backed by an extensive network with approximately 900 offices and 22,000 sales associates across 70 countries. Accredited with a Master’s Degree of Science in Real Estate at the Faculty of Architecture of the University of Hong Kong majoring in general practice surveying, awarded three Top Agent Awards, and graced with a vision in marketing, management and leadership, Binoche holds a bold vision to run the company abiding to the spirit of fairness and collaboration, that is considered to be revolutionary among the norm of the competitive property industry.
-    </p>
+    <div class="management-wrapper">   <p class="career-desc">
+        A leader who listens and delivers, a dreamer who thinks and acts, Binoche Chan devotes her passion only to matters that pull her heartstrings. With over 15 years of experience in sales, marketing and luxurious properties dealership has equipped her well in handling different situations regarding business set up and operation, it is her detail-oriented attitude and respectable personality that have gained her regard, trust and reputation from clients, colleagues and business partners alike. Reputed for her capability, professionalism, dedication and integrity, Binoche puts her words into action and stays true to her promise in realizing the clients’ dream of a unique and perfect home, that embraces family history, hospitality and a deep taste of life.
+      </p>  <br>
+      <p class="career-desc" style="margin-bottom: 80px;">
+       Recently appointed Chief Operating Officer of List Sotheby’s International Realty, Hong Kong, one of the leading luxury residential brokerages in Hong Kong and the region, Binoche leads a team of dynamic, experienced and well-connected agents that specialize in luxury residential homes, backed by an extensive network with approximately 900 offices and 22,000 sales associates across 70 countries. Accredited with a Master’s Degree of Science in Real Estate at the Faculty of Architecture of the University of Hong Kong majoring in general practice surveying, awarded three Top Agent Awards, and graced with a vision in marketing, management and leadership, Binoche holds a bold vision to run the company abiding to the spirit of fairness and collaboration, that is considered to be revolutionary among the norm of the competitive property industry.
+      </p></div>
+ 
   </div>
   {% include "../base/footer.html" %}
 </body>
