--- a/app/style/buy-rent-search.less
+++ b/app/style/buy-rent-search.less
@@ -2,7 +2,7 @@
   font-size: 14px;
   height: 35px;
   padding-top: 30px;
-  margin-bottom: 50px;
+  margin-bottom: 40px;
   a {
     color: black;
   }
@@ -11,7 +11,13 @@
 .search-form{
   max-width: 780px;
   margin: 0 auto;
-  margin-bottom: 50px;
+  margin-bottom: 40px;
+  .col-md-1{
+    padding-left: 18px;
+    padding-right: 0;
+    width: auto;
+  }
+
   .col-md-6, .col-md-12 {
     padding-left: 18px;
     padding-right: 18px;
